Enhance styles for hero section and filter buttons
Updated hero section styles and filter button colors for better visibility.

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
         /* Hero Section */
         .hero { height: 40vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; background: radial-gradient(circle at center, #111 0%, #050505 100%); }
-        .hero h1 { font-size: 3.5rem; font-weight: 800; margin-bottom: 15px; }
-        .hero p { color: #888; font-size: 1.2rem; max-width: 700px; }
+        .hero h1 { color:var(--accent),font-size: 3.5rem; font-weight: 800; margin-bottom: 15px; }
+        .hero p { color:#FFF; font-size: 1.2rem; max-width: 700px; }
 
         /* Filter System */
         .filter-container { padding: 40px 5%; text-align: center; position: sticky; top: 80px; background: var(--bg); z-index: 900; }
-        .filter-btn { background: none; border: 1px solid #333; color: #888; padding: 10px 25px; cursor: pointer; border-radius: 50px; margin: 5px; transition: 0.3s; font-family: 'Tajawal'; }
+        .filter-btn { background: none; border: 1px solid #333; color: #FFF; padding: 10px 25px; cursor: pointer; border-radius: 50px; margin: 5px; transition: 0.3s; font-family: 'Tajawal'; }
         .filter-btn:hover, .filter-btn.active { background: var(--accent); color: black; border-color: var(--accent); font-weight: bold; }
 
         /* Portfolio Grid */
@@ -172,6 +172,7 @@
     </nav>
 
     <header class="hero">
+        <h1>هاشم فهد</h1>
         <h1>إبداع بلا حدود</h1>
         <p>استكشف جميع أقسام الجرافيكس من خلال أعمالي المختارة بعناية، حيث تلتقي التكنولوجيا بالفن.</p>
     </header>
