--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         /* Hero Section */
         .hero { height: 40vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; background: radial-gradient(circle at center, #111 0%, #050505 100%); }
-        .hero h1 { color:#00ff88,font-size: 3.5rem; font-weight: 800; margin-bottom: 15px; }
+        .hero h1 { color:#0000FF,font-size: 3.5rem; font-weight: 800; margin-bottom: 15px; }
         .hero p { color:#FFF; font-size: 1.2rem; max-width: 700px; }
 
         /* Filter System */
